7 May 2024: Wouter
	- Merge #1062: Fix potential overflow bug while parsing port in
	  function cfg_mark_ports.
	- Fix for #1062: declaration before statement, avoid print of null,
	  and redundant check for array size.

1 May 2024: Wouter
	- Fix for the DNSBomb vulnerability CVE-2024-33655. Thanks to Xiang Li
	  from the Network and Information Security Lab of Tsinghua University
	  for reporting it.
	- Set version number to 1.20.0 for release. This became the release
	  on 8 may 2024, the repository continues with version 1.20.1.

29 April 2024: Yorgos
	- Cleanup unnecessary strdup calls for EDE strings.

29 April 2024: Wouter
	- Fix doxygen comment for errinf_to_str_bogus.

26 April 2024: Wouter
	- Fix cachedb with serve-expired-client-timeout disabled. The edns
	  subnet module deletes global cache and cachedb cache when it
	  stores a result, and serve-expired is enabled, so that the global
	  reply, that is older than the ecs reply, does not return after
	  the ecs reply expires.
	- Add unit tests for cachedb and subnet cache expired data.
	- Man page entry for unbound-checkconf -q.

26 April 2024: Yorgos
	- Fix #876: [FR] can unbound-checkconf be silenced when configuration
	  is valid?

25 April 2024: Wouter
	- Fix configure flto check error, by finding grep for it.
	- Merge #1041: Stub and Forward unshare. This has one structure
	  for them and fixes #1038: fatal error: Could not initialize
	  thread / error: reading root hints.
	- Fix to disable fragmentation on systems with IP_DONTFRAG,
	  with a nonzero value for the socket option argument.
	- Fix doc unit test for out of directory build.

24 April 2024: Wouter
	- Fix ci workflow for macos for moved install locations.

23 April 2024: Yorgos
	- Merge #1053: Remove child delegations from cache when grandchild
	  delegations are returned from parent.

22 April 2024: Wouter
	- Add checklock feature verbose_locking to trace locks and unlocks.
	- Fix edns subnet to sort rrset references when storing messages